# safe-diffusion-cg

./: COLAB_OUTLINE.md  HUGGINGFACE_CHECKLIST.md  LICENSE  MODEL_CARD.md  README.md  SAFETY_GUIDE.md  pyproject.toml  requirements.txt
examples/: quickstart_cg.py
models/: README.md
sdg/: cli.py
sdg/classifier/: README.md  model.py
sdg/examples/: quickstart_cg.py
sdg/generation/: cg_runner.py
