
# --- file: pyproject.toml ---

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-diffusion-guidance"
version = "0.1.0"
requires-python = ">=3.10"
description = "Minimal Classifier Guidance (CG) for Stable Diffusion"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "torch",
  "diffusers>=0.25",
  "transformers",
  "safetensors",
  "accelerate",
  "pillow",
  "tqdm",
  "huggingface_hub"
]

[project.scripts]
sdg = "sdg.cli:main"

[tool.setuptools]
packages = ["sdg", "sdg.generation", "sdg.classifier"]

